style.css
:root {
    --color-one: #2d334a;
    --color-two: #8e3400;
    --background: #d7d7d7;
    --white: #ffffff;
}

*,
html {
    box-sizing: border-box;

}

#alert {
    margin-top: 10px;
    color: var(--color-two);
}

i {
    color: var(--color-two);
}

body {
    font-family: 'Helvetica', 'Arial', sans-serif;
    margin: auto;
    width: 95vw;
    max-width: 800px;
    overflow: scroll;
}

header {
    color: var(--color-one);
    background-color: var(--background);
    padding: 16px;
    height: 28vh;
    min-height: 250px;
}

.header {
    padding-top: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: space-between;

}


.header .img {
    border: 3px var(--color-one) solid;
    width: 115px;
    height: 115px;
    position: relative;
    overflow: hidden;
    border-radius: 50%;
    margin-right: 10px;
    margin-top: 10px;
}

.name {
    margin-top: 25px;
}

.name p {
    max-width: 90%;
}

header center {

    font-size: 14px;
}

.justify {
    width: 95%;
    margin: auto;
    margin-top: 10px;
    font-weight: 200;
    font-size: 16px;
    text-align: justify;
    text-align-last: justify;
}

#links {
    width: 100%;
    overflow: scroll;
    margin: auto;

    display: flex;

    justify-content: space-between;
    list-style-type: none;
}

#links * {
    margin: 10px;
}

h3 {
    color: var(--color-two);
    font-size: 1.3em;
    text-decoration: wavy;
}

